@@ -14,6 +14,11 @@ code and to keep track of all tags.
      * Please list in reverse chronological order (last date on top)
      ---------------------------------------------------------------
 
+27-April 2015, Gunter Folger             had-im_r-V10-00-10
+- Fix for compiler warning (clang 3.6) on expression with side effects
+  - G4CollisionManager::Print() use const & as argument to typeid()
+  - G4CollisionInitialState::BCAction(): return pointer to const object.
+  
 16-October-2014 Andrea Dotti	         had-im_r-V10-00-09
 - Bug fixing for DRD: correctly destroy mutex after initialization
 
